--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -322,12 +322,15 @@ int foo(int n) {
 
 \begin{figure}
   \centering
-  \scriptsize
-  \begin{tabularx}{\textwidth}{ l l X X X X X X X X X X X}
-  \toprule
-  %\textbf{line}
+  \large  
+  \hspace{8pt} \color{darkgray} \textsf{\textbf{time}}  \color{black} $\rightarrow$ \raggedright
+  \vspace{2pt}
+   
+  \rotatebox{90}{$\leftarrow$ \color{darkgray} \textsf{\textbf{space} \color{black}}}
+  \small
+  \begin{tabularx}{0.94\textwidth}{ l @{\hspace{4pt}} l @{\hspace{4pt}} X @{\hspace{4pt}} X @{\hspace{4pt}} X @{\hspace{4pt}} X @{\hspace{4pt}} X @{\hspace{4pt}} X @{\hspace{4pt}} X @{\hspace{4pt}} X @{\hspace{4pt}} X @{\hspace{4pt}} X @{\hspace{4pt}} l}  
+  \toprule  
   &
-  %\textbf{code} 
   &
   \textbf{$t_1$}&
   \textbf{$t_2$}&
@@ -339,22 +342,57 @@ int foo(int n) {
   \textbf{$t_8$}&
   \textbf{$t_9$}\\
   \midrule
+  &
+  &
+  \iC{n; i} &
+  \iC{n; i} &
+  \iC{n; i} &
+  \iC{n; i} &
+  \iC{n; i} &
+  \iC{n; i} &
+  \iC{n; i} &
+  \iC{n; i} &
+  \iC{n; i} \\
+  \midrule
   1 & \iC{//foo(3)}\\
   2 & \iC{int foo(int n)\{} \\
   3 & \hspace{8pt}~\iC{int i = 0;}
-  & n=3 \\  
+  & \iC{3; _} \\  
   4 & \hspace{8pt}~\iC{while(i < n)\{} 
   &
-  & n=3;~i=0 
+  & \iC{3; 0}
   &
-  & n=3;~i=1 \\
-  5 & \hspace{16pt}~\iC{i++;}\\
+  & \iC{3; 1}
+  & 
+  & \iC{3; 2}\\
+  5 & \hspace{16pt}~\iC{i++;}
   &
   &
-  & n=3;~i=0;\\
+  & \iC{3; 0}; 
+  &
+  & \iC{3; 1}\\
   6 & \hspace{8pt}~\iC{\}}\\
-  7 & \hspace{8pt}~\iC{return i;}\\
-  8 & \iC{\}}\\
+  7 & \hspace{8pt}~\iC{return i;}
+  &
+  &
+  &
+  &
+  &
+  &
+  &
+  &
+  \iC{3; 3}\\
+  8 & \iC{\}}
+    &
+  &
+  &
+  &
+  &
+  &
+  &
+  &
+  &
+  \iC{return 3}\\
   \bottomrule
   \end{tabularx}
   \caption{Tracking variable values across time and space}
